# tfvarsauto

./: Cargo.toml  README.md
src/: main.rs  main.rs.bk
