[package]
name = "tfvarsauto"
version = "0.2.0"
edition = "2021"
description = "Tool to create vars.tf with variables definition and outputs.tf with template of outputs definition from terraform code"

[dependencies]
hcl-rs = "0.16.7"
args = "2.2.0"
getopts = "0.2"
serde_json = "1.0.111"
regex = "1.10.3"
